Update junit-framework monorepo to v6.0.2 (#137)
Update junit-framework monorepo to v6.0.2